feat: Refactor projection selection handling to introduce wrapInGroupingIfNeeded method for improved clarity and structure in RepeatSelection and UnnestingSelection