@@ -18,12 +18,19 @@
 package au.csiro.pathling.projection;
 
 
+import static au.csiro.pathling.encoders.ValueFunctions.ifArray;
+import static org.apache.spark.sql.functions.array;
+import static org.apache.spark.sql.functions.concat;
+import static org.apache.spark.sql.functions.isnull;
+import static org.apache.spark.sql.functions.when;
+
 import au.csiro.pathling.encoders.ColumnFunctions;
 import au.csiro.pathling.fhirpath.collection.Collection;
 import jakarta.annotation.Nonnull;
 import java.util.List;
 import lombok.Value;
 import org.apache.spark.sql.Column;
+import org.apache.spark.sql.functions;
 
 /**
  * The result of evaluating a projection, which consists of a list of {@link ProjectedColumn}
@@ -48,6 +55,19 @@ public class ProjectionResult {
   @Nonnull
   Column resultColumn;
 
+
+  /**
+   * Creates a new ProjectionResult with the specified result column, retaining the existing
+   *
+   * @param newResultColumn The new result column
+   * @return A new ProjectionResult with the updated result column
+   */
+  @Nonnull
+  ProjectionResult withResultColumn(@Nonnull final Column newResultColumn) {
+    return of(this.results, newResultColumn);
+  }
+
+
   /**
    * Combine the results of multiple projections into a single result.
    *
@@ -56,7 +76,7 @@ public class ProjectionResult {
    */
   @Nonnull
   public static ProjectionResult combine(@Nonnull final List<ProjectionResult> results) {
-    return combine(results, false);
+    return product(results, false);
   }
 
   /**
@@ -69,8 +89,25 @@ public class ProjectionResult {
   @Nonnull
   public static ProjectionResult combine(@Nonnull final List<ProjectionResult> results,
       final boolean outer) {
+    return product(results, outer);
+  }
+
+  /**
+   * Creates a product (Cartesian product) of multiple projection results.
+   * <p>
+   * This combines results using struct product semantics, where each result is expanded to include
+   * all combinations from the inputs.
+   * </p>
+   *
+   * @param results The results to combine via product
+   * @param outer Whether to use outer join semantics
+   * @return The product of all results
+   */
+  @Nonnull
+  public static ProjectionResult product(@Nonnull final List<ProjectionResult> results,
+      final boolean outer) {
     if (results.size() == 1 && !outer) {
-      return results.get(0);
+      return results.getFirst();
     } else {
       return of(
           results.stream().flatMap(r -> r.getResults().stream()).toList(),
@@ -78,6 +115,42 @@ public class ProjectionResult {
               results.stream().map(ProjectionResult::getResultColumn).toArray(Column[]::new))
       );
     }
+  }
+
+  /**
+   * Creates a concatenation (union) of multiple projection results.
+   * <p>
+   * This combines results by concatenating their arrays, ensuring each result is converted to an
+   * array format before concatenation.
+   * </p>
+   *
+   * @param results The results to concatenate
+   * @return The concatenated result
+   */
+  @Nonnull
+  public static ProjectionResult concatenate(@Nonnull final List<ProjectionResult> results) {
+    if (results.isEmpty()) {
+      throw new IllegalArgumentException("Cannot concatenate empty list of results");
+    }
+
+    // Process each result to ensure they are all arrays
+    final Column[] converted = results.stream()
+        .map(ProjectionResult::getResultColumn)
+        // When the result is a singular null, convert it to an empty array
+        .map(col -> when(isnull(col), array())
+            .otherwise(ifArray(col,
+                // If the column is an array, return it as is
+                c -> c,
+                // If the column is a singular value, convert it to an array
+                functions::array
+            )))
+        .toArray(Column[]::new);
+
+    // Concatenate the converted columns
+    final Column combinedResult = concat(converted);
+
+    // Use the schema from the first result
+    return results.getFirst().withResultColumn(combinedResult);
   }
 
   /**
